--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,13 +6,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="container">
-		<form class="form" action="/login">
-			<label for="email">Email: </label><input class="form-control" id="email" name="email" autofocus required>
-			<label for="password">Password: </label><input class="form-control" id="password" name="password" required>
-			<br/>
-			<input class="form-control btn btn-lg btn-primary" type="submit">
-		</form>		
-	</div>
+	<object data="test.pdf" type="Kbis.pdf" width="600" height="800">
+ 	 lie alternatif : <a href="test.pdf">test.pdf</a>
+	</object>
 </body>
 </html>
