--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<object data="test.pdf" type="Kbis.pdf" width="600" height="800">
- 	 lie alternatif : <a href="test.pdf">test.pdf</a>
+	<object data="test.pdf" type="application/pdf" width="600" height="800">
+ 	 lie alternatif : <a href="Kbis.pdf">Kbis.pdf</a>
 	</object>
 </body>
 </html>
