--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<object data="test.pdf" type="application/pdf" width="600" height="800">
+	<object data="Kbis.pdf" type="application/pdf" width="600" height="800">
  	 lie alternatif : <a href="Kbis.pdf">Kbis.pdf</a>
 	</object>
 </body>
