--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<object data="Kbis.pdf" type="application/pdf" width="600" height="800">
 	</object>
 	
-	<object data="status_sarl.pdf" type="application/pdf" width="600" height="800">
+	<object data="statuts_sarl.pdf" type="application/pdf" width="600" height="800">
 	</object>
 </body>
 </html>
