--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CSSO</title>
+	<title>Kit SARL</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<object data="cerfa.pdf" type="application/pdf" width="600" height="800">
-	</object>
+	</object><br><br>
 	
 	<object data="Kbis.pdf" type="application/pdf" width="600" height="800">
-	</object>
+	</object><br><br>
 	
 	<object data="statuts_sarl.pdf" type="application/pdf" width="600" height="800">
-	</object>
+	</object><br><br>
 </body>
 </html>
