--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 	<object data="cerfa.pdf" type="application/pdf" width="600" height="800">
-	</object>
+	</object><br><br>
 	
 	<object data="Kbis.pdf" type="application/pdf" width="600" height="800">
-	</object>
+	</object><br><br>
 	
 	<object data="status_sarl.pdf" type="application/pdf" width="600" height="800">
-	</object>
+	</object><br><br>
 </body>
 </html>
