--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<object data="cerfa.pdf" type="application/pdf" width="600" height="800">
-	</object><br><br>
-	
-	<object data="Kbis.pdf" type="application/pdf" width="600" height="800">
-	</object><br><br>
-	
-	<object data="statuts_sarl.pdf" type="application/pdf" width="600" height="800">
-	</object><br><br>
+	<div class="row align-items-center">
+		<object data="cerfa.pdf" type="application/pdf" width="600" height="800">
+		</object><br><br>
+
+		<object data="Kbis.pdf" type="application/pdf" width="600" height="800">
+		</object><br><br>
+
+		<object data="statuts_sarl.pdf" type="application/pdf" width="600" height="800">
+		</object><br><br>
+	<div/>
 </body>
 </html>
