--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CSSO</title>
+	<title>Kit SARL</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<H1>Kit de création d'une SARL<H1/>
+	<H1>Kit de création d'une SARL<H1/><br><br>
 	<div class="row align-items-center">
 		<object data="cerfa.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
