--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</object><br><br>
 		
 		<H2>Statutde notre SARL<H2/>
-		<object data="status_sarl.pdf" type="application/pdf" width="600" height="800">
+		<object data="statuts_sarl.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
 		
 		<H2>Demande INPI<H2/>
