--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 	<H1>Kit de création d'une SARL<H1/><br><br>
-	<div class="row align-items-center">
+
 		
 		<H2>Plan d'action<H2/>
 		<object data="Plan_action.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
 		
-		<H2>Statutde notre SARL<H2/>
-		<object data="status_sarl.pdf" type="application/pdf" width="600" height="800">
+		<H2>Statut de notre SARL<H2/>
+		<object data="statuts_sarl.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
 		
 		<H2>Demande INPI<H2/>
@@ -33,6 +33,6 @@
 		<H2>Mémorandum statut social de la société<H2/>
 		<object data="Memo_statut_societe.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
-	</div>
+
 </body>
 </html>
