--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,7 +11,7 @@
 
 		
 		<H2>Plan d'action<H2/>
-		<object data="Plan_action.pdf" type="application/pdf" width="600" height="800">
+		<object data="Plan_action.pdf" type="application/pdf" width="800" height="1000">
 		</object><br><br>
 		
 		<H2>Statut de notre SARL<H2/>
@@ -21,6 +22,10 @@
 		<object data="cerfa.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
 		
+		<H2>M0<H2/>
+		<object data="M0.pdf" type="application/pdf" width="600" height="800">
+		</object><br><br>	
+			
 		<H2>Kbis<H2/>
 		<object data="Kbis.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
@@ -34,7 +39,7 @@
 		</object><br><br>
 
 </body>
-  <style>
+ <style>
     body {
       text-align:center;
     }
