--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 		<H2>Kbis<H2/>
 		<object data="Kbis.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
+			
+		<H2>Annonce Légale<H2/>
+		<object data="Annonce_Legale.pdf" type="application/pdf" width="600" height="800">
+		</object><br><br>
+				
+		<H2>Déclaration de non condamnation<H2/>
+		<object data="Decla_condamnation.pdf" type="application/pdf" width="600" height="800">
+		</object><br><br>
 		
 		<H2>Mémorandum statut social du gérant<H2/>
 		<object data="Memo_statut_gerant.pdf" type="application/pdf" width="600" height="800">
