--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 		<H2>Déclaration de non condamnation<H2/>
 		<object data="Decla_condamnation.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
+			
+		<H2>Déclaration de non condamnation<H2/>
+		<object data="Dépôt_de_capital.pdf" type="application/pdf" width="600" height="800">
+		</object><br><br>	
 		
 		<H2>Mémorandum statut social du gérant<H2/>
 		<object data="Memo_statut_gerant.pdf" type="application/pdf" width="600" height="800">
