--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<object data="Decla_condamnation.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
 			
-		<H2>Déclaration de non condamnation<H2/>
+		<H2>Dépôt de capital<H2/>
 		<object data="Dépôt_de_capital.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>	
 		
