--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 		<object data="De´po^t_de_capital.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>	
 		
-		<H2>Me´morandum statut social du ge´rant<H2/>
+		<H2>Mémorandum statut social du gérant<H2/>
 		<object data="Memo_statut_gerant.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
 		
-		<H2>Me´morandum statut social de la société<H2/>
+		<H2>Mémorandum statut social de la société<H2/>
 		<object data="Memo_statut_societe.pdf" type="application/pdf" width="600" height="800">
 		</object><br><br>
 
